cabal-version:      3.0
name:               quo
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Janosch Kindl
maintainer:         janoschkindl+srht@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall -fno-warn-missing-signatures

executable quo
    import:         warnings
    main-is:        Main.hs
    other-modules:
        Types,
        Resolver,
        Cgen,
        Qbegen,
        Specializer,
        Expressions,
        Statements,
        Lexer,
        Platte,
        Drucker
    other-extensions:
        DeriveDataTypeable,
        OverloadedStrings
    build-depends:
        base,
        attoparsec < 0.15,
        transformers < 0.7,
        text
    hs-source-dirs: src
    default-language: Haskell2010
